--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,4 @@
-target_sources(nand2tetris PRIVATE
-    Iterator.cpp
-    Reader.cpp
-    Lexer.cpp
-    Errors.cpp
-    Parser.cpp
-    OriginalSourceWriter.cpp
-    Instructions.cpp
-    Assembler.cpp
-    SymbolResolvedWriter.cpp
 
-)
+add_subdirectory(Utils)
+add_subdirectory(Assembler)
+add_subdirectory(ASMTranslator)
