--- a/src/ASMTranslator/CMakeLists.txt
+++ b/src/ASMTranslator/CMakeLists.txt
@@ -1,4 +1,8 @@
 target_sources(vasm PRIVATE
     ASMGenerator.cpp
     VMParser.cpp
+    VMCommand.cpp
 )
+
+
+target_link_libraries(vasm PUBLIC utils)
