--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,20 @@ project(nand2tetris)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -fkeep-static-consts")
 set(NAND2TETRIS_INSTALL_INCLUDE_DIR "include" CACHE STRING "The installation include directory")
-set(CMAKE_BUILD_TYPE Debug)
+
+# if (CMAKE_BUILD_TYPE STREQUAL "Release")
+#         message(STATUS "Enabling lto.")
+#         set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
+# endif()
+
 
 include(FetchContent)
 FetchContent_Declare(
         fmt
         GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-        GIT_TAG master
+        GIT_TAG 9.0.0
 )
 FetchContent_MakeAvailable(fmt)
 
@@ -19,9 +25,14 @@ FetchContent_MakeAvailable(fmt)
 add_library(assembler OBJECT)
 add_library(vasm OBJECT)
 add_library(utils OBJECT)
+#add_library(compiler OBJECT)
+#add_library(mini OBJECT)
+add_library(hardware_simulator OBJECT)
+#add_library(hardware_simulator_v2 OBJECT)
+
+
 add_subdirectory(include)
 add_subdirectory(src)
-
 add_subdirectory(tools)
 
 # add_library(nand2tetris OBJECT)
