--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@
 add_subdirectory(Utils)
 add_subdirectory(Assembler)
 add_subdirectory(ASMTranslator)
-#add_subdirectory(Compiler)
+add_subdirectory(Compiler)
 #add_subdirectory(Mini)
 add_subdirectory(Simulator)
